[project]
name = "jevebaragpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "gradio>=5.33.0",
    "logfire[fastapi]>=3.18.0",
    "pydantic-ai[examples]>=0.2.15",
    "torch",
    "transformers",
    "torchaudio",
    "gradio",
    "groq",
    "numpy",
    "soundfile",
    "librosa",
    "spaces",
    "xxhash",
    "datasets",
]
